# skrino

./: .gitignore  Cargo.toml  LICENSE  README.md  TECHNICAL.md  THIRD-PARTY-NOTICES.md
.cargo/: config.toml
.github/: release-body.md
.github/workflows/: release.yml
crates/skrino-app/: Cargo.toml  build.rs
crates/skrino-app/examples/: gen_ico.rs
crates/skrino-app/src/: app.rs  autostart.rs  config.rs  daemon.rs  hotkey.rs  main.rs  notify.rs  overlay.rs  record.rs  record_frame.rs  settings_ui.rs  share.rs  theme.rs  toast.rs  transform.rs  tray.rs
crates/skrino-app/src/editor/: canvas.rs  mod.rs  toolbar.rs  tools.rs
crates/skrino-capture/: Cargo.toml
crates/skrino-capture/examples/: capture.rs
crates/skrino-capture/src/: lib.rs
crates/skrino-core/: Cargo.toml
crates/skrino-core/src/: annotation.rs  document.rs  lib.rs  render.rs
crates/skrino-core/src/render/: blur.rs  text.rs
crates/skrino-record/: Cargo.toml
crates/skrino-record/examples/: duration_check.rs
crates/skrino-record/src/: lib.rs
crates/skrino-record/src/imp/: audio_dsp.rs  audio_wasapi.rs  backend.rs  clock.rs  flip.rs  geometry.rs  mod.rs  pacing.rs  stub.rs
crates/skrino-upload/: Cargo.toml
crates/skrino-upload/src/: ftp.rs  lib.rs  sftp.rs
