[package]
name = "skrino-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "skrino"
path = "src/main.rs"

[dependencies]
skrino-core = { path = "../skrino-core" }
skrino-capture = { path = "../skrino-capture" }
skrino-upload = { path = "../skrino-upload" }

anyhow.workspace = true
serde.workspace = true
image.workspace = true
log.workspace = true
env_logger = "0.11"

eframe = { version = "0.33", default-features = false, features = ["glow", "persistence", "wayland", "x11"] }
egui = "0.33"

global-hotkey = "0.7"
tray-icon = "0.21"
# Windowless event loop for the tray daemon (matches eframe 0.33's winit).
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
# Clipboard with image support
arboard = { version = "3", features = ["image-data"] }
# Native save/open dialogs
rfd = "0.15"
dirs = "6"
serde_json = "1"
chrono = "0.4"
egui-phosphor = "0.11"
webbrowser = "1"

[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
tauri-winrt-notification = "0.8.0"
winapi = { version = "0.3", features = [
    "winuser",
    "windef",
    "synchapi",
    "handleapi",
    "errhandlingapi",
    "processthreadsapi",
    "winbase",
    "winnt",
    "winerror",
    "minwindef",
] }
winreg = "0.55"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
