[package]
name = "skrino-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
image.workspace = true
log.workspace = true
# Cross-platform screen capture (Windows Graphics Capture under the hood)
xcap = "0.7"
