[package]
name = "skrino-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
image.workspace = true
log.workspace = true
# Pure-Rust 2D rendering for export (must visually match what the UI shows)
tiny-skia = "0.11"
# Text rasterization for the Text tool at export time
ab_glyph = "0.2"
